disable unavail vid

--- a/src/components/pages/services/cici-study-abroad-expert/Journey.astro
+++ b/src/components/pages/services/cici-study-abroad-expert/Journey.astro
@@ -9,7 +9,7 @@ const arrowRight =
 	"/pages/services/cici-study-abroad-expert/journey/arrow-right.svg";
 
 const videos = [
-	{ src: "csc1UMCd_bI", type: "youtube" },
+	// { src: "csc1UMCd_bI", type: "youtube" },
 	{ src: "6BzIMP_XYTU", type: "youtube" },
 	{ src: "V5XoTROiKFw", type: "youtube" },
 	{ src: "ZvDdh2PlTd4", type: "youtube" },
